// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the AnalysisCollapsible in opened state matches the snapshot 1`] = `
<div
  className="sc-bdVaJa efvPnS"
>
  <div>
    <h3>
      <button
        aria-expanded={true}
        className="sc-bwzfXH kkDEGu"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="sc-htpNat bYQXEr sc-EHOje gGDgkd"
        />
        <span
          className="sc-bxivhb gsqksJ"
        >
           
          Problems (undefined)
           
        </span>
      </button>
    </h3>
  </div>
  <ul>
    <ul>
      <li>
         First item 
      </li>
      <li>
         Second item 
      </li>
      <li>
         Third item 
      </li>
      <li>
         Fourth item 
      </li>
    </ul>
  </ul>
</div>
`;

exports[`the default AnalysisCollapsible matches the snapshot 1`] = `
<div
  className="sc-bdVaJa efvPnS"
>
  <div>
    <h3>
      <button
        aria-expanded={false}
        className="sc-bwzfXH kkDEGu"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="sc-htpNat bYQXEr sc-ifAKCX dgWlkW"
        />
        <span
          className="sc-bxivhb gsqksJ"
        >
           
          Problems (undefined)
           
        </span>
      </button>
    </h3>
  </div>
  <ul />
</div>
`;
